--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -4,11 +4,11 @@
  left: 0;
  right: 0;
  bottom: 0;
- background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
+ background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
- z-index: 1000; /* Высокий z-index для отображения поверх других элементов */
+ z-index: 1000;
 }
 
 .modalContent {
@@ -16,8 +16,8 @@
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
- width: 50%; /* Ширина модального окна */
- max-width: 90%; /* Максимальная ширина для мобильных устройств */
+ width: 50%;
+ max-width: 90%;
  display: flex;
  flex-direction: column;
 }
@@ -26,6 +26,7 @@
  background: none;
  border: none;
  font-size: 24px;
+ margin-top: 0px;
  cursor: pointer;
  margin-left: auto;
 }
